--- a/contact/contact.html
+++ b/contact/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/asset/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/asset/css/contact.css">
+    <link rel="stylesheet" type="text/css" href="./asset/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./asset/css/contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
@@ -17,10 +17,10 @@
             <div class="intro">
                 <h3>Stage non rémunéré (10 semaines)</h3>
                 <p>Je suis actuellement à la recherche d'un stage dans le domaine du développement d'applications web. De nature rigoureuse et adaptable, je souhaite partager mes compétences avec vous en rejoignant votre équipe. Je saurai vous écouter et vous apporter des solutions adaptées !</p>
-                <img src="/asset/img/dev.jpg" alt="dev">
+                <img src="./asset/img/dev.jpg" alt="dev">
             </div>
             <div class="donnee">
-                <img src="/asset/img/logo.png" alt="logo">
+                <img src="./asset/img/logo.png" alt="logo">
                 <h2>Jean-François Vu</h2>
                 <address>
                     <p>7 chemin des grosses plantes</p>
@@ -31,7 +31,7 @@
             </div>
             <nav>
                 <ul class="element">
-                    <li><a href="/index.html">Accueil</a></li>
+                    <li><a href="./index.html">Accueil</a></li>
                     
                 </ul>
             </nav>
@@ -69,15 +69,15 @@
         <div class="grid-footer">
             
             <div class="media">
-                <a href="https://www.linkedin.com/"><img src="/asset/img/linkedIn.png" alt="linkedin"></a>
-                <a href="https://www.instagram.com/"><img src="/asset/img/instagram.jpg" alt="instagram"></a>
-                <a href="https://twitter.com/"><img src="/asset/img/x.png" alt="X"></a>
+                <a href="https://www.linkedin.com/"><img src="./asset/img/linkedIn.png" alt="linkedin"></a>
+                <a href="https://www.instagram.com/"><img src="./asset/img/instagram.jpg" alt="instagram"></a>
+                <a href="https://twitter.com/"><img src="./asset/img/x.png" alt="X"></a>
             </div>
             <div class="text-foot">
                 <p>&copy; Curriculum Vitae Jean-François Vu</p>
             </div>
             <div class="mention">
-                <a href="/mentionsleg/mentions.html">Mentions Légales</a>
+                <a href="./mentionsleg/mentions.html">Mentions Légales</a>
             </div>
         </div>
     </footer>
