--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <nav>
                 <ul class="element">
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="./contact/contact.html">Contact</a></li>
-                    <li><a href="./interet/interet.html">Mes Centres D'intérêts</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./interet.html">Mes Centres D'intérêts</a></li>
                 </ul>
             </nav>
         
@@ -135,7 +135,7 @@
                 <p>&copy; Curriculum Vitae Jean-François Vu</p>
             </div>
             <div class="mention">
-                <a href="./mentionsleg/mentions.html">Mentions Légales</a>
+                <a href="./mentions.html">Mentions Légales</a>
             </div>
         </div>
     </footer>
